k8s/manifests/bf3/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bf3
  name: influxdb
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7.9
          ports:
            - containerPort: 8086
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-http
  namespace: bf3
  annotations:
    "coredns.io/hostname": influxdb.o.cavnet.cloud
spec:
  selector:
    app: influxdb
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
