k8s/manifests/bf3/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: bf3
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.6.0
          args:
            - --config=/etc/grafana/config/grafana.conf
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: grafana-conf
              mountPath: /etc/grafana/config
              readOnly: true
            - name: grafana-datasources-conf
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
      volumes:
        - name: grafana-conf
          configMap:
            name: grafana-conf
            optional: false
        - name: grafana-datasources-conf
          configMap:
            name: grafana-datasources-conf
            optional: false
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: bf3
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: bf3
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
  hostnames:
    - grafana-bf3.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
